@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<x xmlns:xinclude="http://www.w3.org/2001/XInclude">
+   <!-- Simple test of a fallback on unavailble URI -->
+   <warning>Inclusion failed</warning>
+</x>
